--- a/css/main.css
+++ b/css/main.css
@@ -6,9 +6,29 @@
   box-sizing: border-box;
 }
 
+body {
+  font-family: "Livvic", sans-serif;
+  background-color: #014E56;
+}
+
 .container {
+  max-width: 1200px;
   margin: 0 auto;
   padding: 0 20px;
+}
+
+.visually-hidden {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0;
+  padding: 0;
+  white-space: nowrap;
+  -webkit-clip-path: inset(100%);
+          clip-path: inset(100%);
+  clip: rect(0 0 0 0);
+  overflow: hidden;
 }
 
 /*! normalize.css v8.0.1 | MIT License | github.com/necolas/normalize.css */
@@ -321,21 +341,331 @@ template {
   display: none;
 }
 
-.visually-hidden {
-  position: absolute;
-  width: 1px;
-  height: 1px;
-  margin: -1px;
-  border: 0;
-  padding: 0;
-  white-space: nowrap;
-  -webkit-clip-path: inset(100%);
-          clip-path: inset(100%);
-  clip: rect(0 0 0 0);
-  overflow: hidden;
+.site-header {
+  padding: 77px 0 129px;
 }
 
-.title {
-  color: red;
-  font-size: 40px;
+.header {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  flex-direction: row;
+}
+
+.header__logo-wrapper {
+  display: flex;
+  align-items: center;
+  justify-content: start;
+  flex-direction: row;
+}
+
+.header__navbar {
+  margin-left: 80px;
+}
+
+.navbar__list {
+  display: flex;
+  align-items: center;
+  justify-content: start;
+  flex-direction: row;
+}
+
+.navbar__item + .navbar__item {
+  margin-left: 40px;
+}
+
+.navbar__link {
+  color: #FFF;
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: 28px;
+  transition: color 0.3s linear;
+}
+.navbar__link:hover {
+  color: #F67E7E;
+}
+
+.header__hamburger-btn {
+  display: none;
+  background-color: transparent;
+  border: none;
+}
+
+.header__contact-us {
+  color: #FFF;
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: 28px;
+  padding: 9px 33px 11px 32px;
+  border-radius: 24px;
+  border: 2px solid #FFF;
+  transition: all 0.3s linear;
+}
+.header__contact-us:hover {
+  background: #FFF;
+  color: #000;
+}
+
+@media (max-width: 800px) {
+  .site-header {
+    padding: 64px 0 112px;
+  }
+  .header__logo-img {
+    width: 128px;
+    height: 32px;
+  }
+  .header__navbar {
+    margin-left: 48px;
+  }
+  .navbar__link {
+    color: #FFF;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 600;
+    line-height: 26px;
+  }
+  .header__contact-us {
+    color: #FFF;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 600;
+    line-height: 26px;
+    padding: 8px 30px;
+  }
+}
+@media (max-width: 580px) {
+  .site-header {
+    padding: 48px 0 80px;
+  }
+  .header__navbar, .header__contact-us {
+    display: none;
+  }
+  .header__hamburger-btn {
+    display: block;
+  }
+}
+.hero-section {
+  background-image: url("../images/hero-circle-bg.svg");
+  background-repeat: no-repeat;
+  background-size: 200px 200px;
+  background-position-x: calc(50% - 739px);
+}
+
+.hero {
+  display: flex;
+  align-items: start;
+  justify-content: space-between;
+  flex-direction: row;
+  padding-bottom: 250px;
+  background-image: url("../images/hero-bottom-bg.svg");
+  background-repeat: no-repeat;
+  background-size: 358px 100px;
+  background-position: bottom right;
+}
+
+.hero__title-wrapper {
+  width: 530px;
+}
+
+.hero__title {
+  color: #FFF;
+  font-size: 100px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 100px;
+  margin: 0;
+}
+
+.hero__title--color {
+  color: #F67E7E;
+}
+
+.hero__text-wrapper {
+  width: 445px;
+}
+
+.content__line {
+  width: 50px;
+  height: 4px;
+  margin-bottom: 79px;
+  display: inline-block;
+  background-color: #79C8C7;
+}
+
+.content__text {
+  color: #FFF;
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: 28px;
+}
+
+@media (max-width: 1007px) {
+  .hero__title {
+    color: #FFF;
+    font-size: 100px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 90px;
+  }
+  .hero__title--color {
+    color: #F67E7E;
+  }
+}
+@media (max-width: 800px) {
+  .hero {
+    display: flex;
+    align-items: center;
+    justify-content: start;
+    flex-direction: column;
+    text-align: center;
+    background-position: bottom center;
+  }
+  .hero__title {
+    color: #FFF;
+    font-size: 64px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 56px;
+    margin-bottom: 24px;
+  }
+  .hero__title-wrapper {
+    width: 100%;
+  }
+  .hero__text-wrapper {
+    width: 100%;
+  }
+  .hero__title--color {
+    color: #F67E7E;
+  }
+  .content__line {
+    display: none;
+  }
+  .content__text {
+    color: #FFF;
+    font-size: 15px;
+    font-style: normal;
+    font-weight: 600;
+    line-height: 28px;
+  }
+}
+@media (max-width: 580px) {
+  .hero {
+    display: flex;
+    align-items: start;
+    justify-content: space-between;
+    flex-direction: column;
+    padding-bottom: 197px;
+    background-image: url("../images/hero-bottom-bg-mobile.svg");
+    background-size: 100% auto;
+  }
+  .hero__title {
+    color: #FFF;
+    font-size: 40px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 40px;
+    margin-bottom: 18px;
+  }
+  .hero__title--color {
+    color: #F67E7E;
+  }
+}
+.service-section {
+  padding: 198px 0 140px;
+  background-color: #012F34;
+  background-image: url("../images/service-bg.svg");
+  background-repeat: no-repeat;
+  background-size: 100px 244px;
+  background-position: bottom right;
+}
+
+.service {
+  display: flex;
+  align-items: start;
+  justify-content: space-between;
+  flex-direction: row;
+}
+
+.service__title-wrapper {
+  position: relative;
+  width: 445px;
+}
+.service__title-wrapper::before {
+  content: "";
+  position: absolute;
+  left: 0;
+  top: -54px;
+  width: 50px;
+  height: 4px;
+  background-color: #F67E7E;
+}
+
+.service__title {
+  color: #FFF;
+  font-size: 48px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 48px;
+}
+
+.service__list {
+  display: flex;
+  align-items: center;
+  justify-content: start;
+  flex-direction: column;
+}
+
+.service__item {
+  display: flex;
+  align-items: center;
+  justify-content: start;
+  flex-direction: row;
+}
+.service__item + .service__item {
+  margin-top: 32px;
+}
+
+.service__item-content-wrapper {
+  width: 445px;
+  margin-left: 23px;
+}
+
+.inner-wrap__title {
+  color: #F67E7E;
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 28px;
+  margin-bottom: 16px;
+}
+
+.inner-wrap__text {
+  color: #FFF;
+  font-size: 15px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: 25px;
+}
+
+@media (max-width: 980px) {
+  .service-section {
+    padding: 136px 100px 0 98px;
+    background-position: top right;
+  }
+  .service {
+    display: flex;
+    align-items: start;
+    justify-content: start;
+    flex-direction: column;
+  }
+  .service__title-wrapper {
+    width: 100%;
+    margin-bottom: 64px;
+  }
+  .service__item-content-wrapper {
+    width: 100%;
+  }
 }/*# sourceMappingURL=main.css.map */
